# OpenGUI-RL

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  presentation.md  presentation.pptx  pyproject.toml  requirements.txt  script.md
artifacts/: README.md
assets/: README.md
configs/: README.md
data/: README.md
data_examples/: README.md  sample_gui_grounding_record.jsonl
docs/: DATA.md  PROJECT_SCOPE.md  README.md  REPRODUCTION.md  blueprint_realignment_point_native_decoupling.md  blueprint_realignment_qwen_backbone.md  dataset_notes.md  dual_path_candidate_generation_and_lightweight_verifier.md  experiment_plan.md  final_artifact_index.md  final_demo_narrative.md  final_handoff_brief.md  final_presentation_outline.md  final_project_report.md  gui_grounding_project_proposal.docx  mind2web_stageA_localization_aware_supervision_geometry_fix.md  mind2web_stageA_point_native_supervision_redesign.md  mind2web_stageA_stageB_sft_and_learned_reranker.md  mind2web_stageA_strong_supervised_baseline.md  mind2web_stageB_candidate_diversity_headroom_expansion.md  mind2web_stageB_conditional_singleton_recovery_supervision.md  mind2web_stageB_rare_point_first_disagreement_support_supervision.md  mind2web_stageB_rare_recovery_targeted_supervision.md  mind2web_stageB_source_aware_reranker_supervision.md  mind2web_stageB_source_gating_and_reranker_calibration.md  point_accuracy_first_refinement_against_public_qwen.md  public_baseline_reproduction_and_same_protocol_comparison.md  qwen_bridge_to_original_crash.md  qwen_candidate_export_safe_run.md  qwen_medium_candidate_export_and_quality_report.md  qwen_runtime_unblock_summary.md  qwen_safe_envelope_regression.md  repo_plan.md  screenspot_v2_clean_heldout_eval.md  screenspot_v2_failure_analysis_and_prompt_refinement.md  screenspot_v2_full_rerun_coordinate_refinement.md  stage1_environment_and_data_validation.md  stage2_real_model_single_inference.md  stage3_sft_baseline.md  stage4_model_based_candidate_generation.md  (+9 more)
notebooks/: README.md  exploratory_sanity_checks.ipynb  mind2web_sanity_check.ipynb
scripts/: README.md  analyze_candidate_pool.py  analyze_mind2web_stageb_conditional_singletons.py  analyze_mind2web_stageb_point_first_disagreement_support.py  analyze_mind2web_stageb_rare_recovery.py  analyze_mind2web_stageb_rebuild.py  analyze_mind2web_stageb_recovery_cases.py  analyze_mind2web_stageb_sources.py  analyze_screenspot_v2_predictions.py  apply_stageb_source_gating.py  compare_mind2web_stageb_runs.py  compare_screenspot_v2_runs.py  inspect_mind2web_samples.py  merge_screenspot_v2_eval_shards.py  package_final_project_outputs.py  prepare_mind2web.py  prepare_screenspot_v2.py  run_demo.py  run_eval_dual_path_verifier.py  run_eval_grounding.py  run_eval_screenspot_v2.py  run_eval_transfer.py  run_eval_visualwebbench.py  run_eval_visualwebbench_dual_path_verifier.py  run_generate_candidates.py  run_mind2web_sanity_pipeline.py  run_quantitative_metrics_suite.py  run_qwen_bridge_repro.py  run_qwen_multisample_validation.py  run_qwen_safe_regression.py  run_single_inference.py  run_train_reranker.py  run_train_sft.py  setup_env.sh
tests/: test_collapse_diagnostics.py  test_config_loading.py  test_dataset_schema.py  test_metrics.py  (+7 more)
(+130 files in other folders)
